--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
   "devDependencies": {
     "@types/node": "^14.14.5",
     "@types/react": "^16.9.54",
+    "@typescript-eslint/eslint-plugin": "^4.6.0",
+    "@typescript-eslint/parser": "^4.6.0",
+    "eslint": "^7.12.1",
+    "eslint-plugin-react": "^7.21.5",
+    "eslint-plugin-react-hooks": "^4.2.0",
     "typescript": "^4.0.5"
   },
   "dependencies": {
